--- a/mouse-interactive/index.html
+++ b/mouse-interactive/index.html
@@ -40,6 +40,7 @@
             let y = 0
             let targetX=0;
             let targetY=0;
+            //마우스의 좌표를 계속 추출함
             window.addEventListener("mousemove",(e)=>{
                 x = e.pageX;
                 y = e.pageY;
