센스있는 마우스 UI 만들기 위한 mouseOVerUI.html 파일생성 및 UI 작성
간단한 UI를 작성한다.

--- a/mouse-interactive/index.html
+++ b/mouse-interactive/index.html
@@ -36,7 +36,7 @@
         window.onload=()=>{
             const h1 = document.querySelector("h1");
             const box = document.querySelector(".box");
-            const speed = 0.05;/*나비가 움직일 속도*/
+            const speed = 0.05;/*나비가 움직이는 속도*/
             let x =0 /*마우스의 pageX값과 pageY값을 가져옴*/
             let y = 0
             let targetX=0; //tartgeX와 targerY를 통해서 천천히 마우스가 있는 쪽으로 이동함 
