스크롤이벤트 및 이미지 추가
스크롤이벤트로 화면에 얼마나 내려갔는지 표시하고 Progressbar를 만들어서 위에서도 스크롤을 확인가능하도록함
물고기 이미지 추가

--- a/mouse-interactive/mouseOverUi.html
+++ b/mouse-interactive/mouseOverUi.html
@@ -126,7 +126,7 @@
             <p>어떤 일에 몰두한 적이 있습니까?</p>
         </div>
         <div class="bottom">
-            <a href="#yes">Yesssss</a>
+            <a href="#yes">Yes</a>
             <span class="line"></span>
             <a href="#no">No</a>
         </div>
